[CRD iOS] Report connection failure after CONNECTED as CONNECTION_DROPPED

Previously we report connection failure both before and after CONNECTED
as CONNECTION_FAILED, which makes it harder to calculate durability.
This CL makes sure connection failures after CONNECTED are reported as
CONNECTION_DROPPED.

Bug: 828210
Change-Id: I8689718a5741aec6b1ea49172838b44857ca4108
Reviewed-on: https://chromium-review.googlesource.com/1011354
Reviewed-by: Jamie Walch <jamiewalch@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550440}
Former-commit-id: 53e4f3ef22d11c09ba36cae9add7c028b1472220